--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
